IronEngineer/force-app/main/default/objects/Safaris_Purchased__c/Safaris_Purchased__c.object-meta.xml
<CustomObject>
    <label>Safaris Purchased</label>
    <nameField>
        <displayFormat>SF - {0000}</displayFormat>
        <label>Safaris Purchased Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Safaris Purchased</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>