IronEngineer/force-app/main/default/objects/Safaris_Purchased__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Safaris Purchased</relationshipLabel>
    <relationshipName>Safaris_Purchased</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>