IronEngineer/force-app/main/default/objects/Safaris_Purchased__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <formula>IF( Amount_Paid__c  &gt;=  Safari__r.Deposit__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Paid</label>
    <type>Checkbox</type>
</CustomField>