IronEngineer/force-app/main/default/objects/Safaris_Purchased__c/fields/Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Paid_in_Full__c</fullName>
    <formula>IF( Amount_Paid__c  =  Safari__r.Price__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid in Full</label>
    <type>Checkbox</type>
</CustomField>