IronEngineer/force-app/main/default/objects/Safaris_Purchased__c/fields/Safari__c.field-meta.xml
<CustomField>
    <fullName>Safari__c</fullName>
    <label>Safari</label>
    <referenceTo>Safari__c</referenceTo>
    <relationshipLabel>Safaris Purchased</relationshipLabel>
    <relationshipName>Safaris_Purchased</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>