IronEngineer/force-app/main/default/objects/Safaris_Purchased__c/validationRules/CantPayTooMuch.validationRule-meta.xml
<ValidationRule>
    <fullName>CantPayTooMuch</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c &gt;  Safari__r.Price__c</errorConditionFormula>
    <errorDisplayField>Amount_Paid__c</errorDisplayField>
    <errorMessage>Customer can&apos;t pay more for the Safari Package than the price of the package</errorMessage>
</ValidationRule>